# Helping-Hand

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html
.github/workflows/: auto-release.yml  ci-cd.yml  ci.yml  formatter.yml  release.yaml
assets/: ortho-map.tmx
assets/acts/: introductory_act.json
assets/fonts/: info.txt
assets/map/: breeding_center.tmx  hh_world.ldtk  level_0.tmx
assets/maps/: hh_test.ldtk
benches/: collision_benchmark.rs  interactives_benchmark.rs
docs/: pull_request_template.md
src/: components.rs  lib.rs  loading.rs  main.rs  map.rs  map_builder.rs  spawner.rs  turn_state.rs
src/audio/: mod.rs  music.rs  sfx.rs
src/diagnostics/: missing_file_finder.rs  mod.rs
src/entities/: player.rs
src/helpers/: camera.rs  mod.rs  texture.rs  tiled.rs
src/map/: mod.rs  player.rs  render.rs
src/map/interactions/: interactives.rs  map_changing.rs  mod.rs
src/map/movement/: collision.rs  grid_based_movement.rs  map_coordinator.rs  mod.rs
src/mechanics/: camera.rs  custom_widgets.rs  input.rs  main_menu_buttons.rs  mod.rs  settings_menu_buttons.rs
src/narrative/: act_loading.rs  acts.rs  mod.rs
src/plugins/: acts.rs  levels.rs  main_menu.rs  map_plugin.rs  mod.rs  playable_character.rs  player_plugin.rs  settings_menu.rs  smart_asset_io.rs
src/systems/: collisions.rs  end_turn.rs  entity_render.rs  map_render.rs  mod.rs  movement.rs  player_input.rs  random_move.rs
src/temp-ref/: input.rs  main_menu.rs  settings_menu.rs
src/ui/: mod.rs
src/ui/menus/: main_menu.rs  mod.rs  settings_menu.rs
src/visuals/: main_menu.rs  map.rs  mod.rs  settings_menu.rs
tests/: acts.rs  camera.rs  collision.rs  grid-based-movement.rs  grid_based_movement.rs  interactives.rs  map_changing.rs  map_instructions.rs  menus.rs  mock_game.rs  scene_loading.rs  tilemap.rs
tests/feature-files/: acts.feature  camera.feature  collision.feature  grid-based-movement.feature  interactives.feature  map_changing.feature  tilemap.feature
tests/feature-files/in-practice/: scene_loading.feature
tests/feature-files/in-theory/: acts.feature  map_instructions.feature  tilemap.feature
tests/feature_files/in-practice/: grid-based-movement.feature  map_changing.feature  menus.feature  scene_loading.feature
tests/feature_files/in-theory/: acts.feature  collision.feature  interactives.feature  tilemap.feature
tests/test-assets/acts/: introductory_act.json
tests/test-assets/maps/: cabin_interior.tmx  collision_test.tmx  even_tiles.tmx  follow_player_test.tmx  marker_test.tmx  multiple_marker_test.tmx  no_transition_test.tmx  object_test.tmx  one_blank.tmx  path_line.tmx  path_loop.tmx  path_place.tmx  path_single.tmx  path_test.tmx  player.tmx  player_2x3.tmx  player_3x3.tmx  player_3x3_at_left.tmx  player_bounds_test.tmx  player_left.tmx  single_sprite_sheet.tmx  test_map.ldtk  test_map.tmx  test_map_with_collision.tmx  transition_test.tmx
tests/test_assets/acts/: image_cutscene_act.json  map_cutscene_act.json  testing_act.json
tests/test_assets/maps/: path_loop.tmx  player_3x3_at_left.tmx
tests/test_assets/maps/camera/: follow_player_test.tmx
tests/test_assets/maps/grid_based_movement/: collision_test.tmx  player_3x3.tmx  player_bounds_test.tmx
(+16 files in other folders)
