[package]
name = "helping-hand"
version = "0.1.0"
publish = false
authors = ["Jesse Fischbeck <jlevifisch@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "^0.13", features = ["file_watcher"] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", rev = "2ee602f" }
bevy_kira_audio = { version = "^0.19", features = ["wav"] }
unicode-segmentation = "^1.10"

[dev-dependencies]
cucumber = "^0.21"
futures = "0.3"

# When adding a new feature, add a new Cucumber Test below
# following the format below:
[[test]]
name = "menus"
harness = false

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", branch = "main" }