[package]
name = "helping-hand"
version = "0.1.0"
publish = false
authors = ["Jesse Fischbeck <jlevifisch@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "^0.13", features = ["wayland"] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", rev = "2ee602f" }
tiled = "^0.12"
bevy_kira_audio = { version = "^0.19", features = ["wav"] }
unicode-segmentation = "^1.10"
serde = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
cucumber = "^0.21"
futures = "0.3"
criterion = { version = "^0.5", features = ["html_reports"] }

# When adding a new feature, add a new Cucumber Test below
# following the format below:
[[test]]
name = "menus"
harness = false

[[test]]
name = "grid-based-movement"
harness = false

[[test]]
name = "tilemap"
harness = false

[[test]]
name = "collision"
harness = false

[[test]]
name = "camera"
harness = false

[[test]]
name = "interactives"
harness = false

# When measuring the performance of some feature, add a new Criterion benchmark below
# following the format:
[[bench]]
name = "collision_benchmark"
harness = false

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", branch = "main" }
